03_A.DEVOPS/Containerization/k8s/yamls/pod-env-envFrom.yaml
apiVersion: v1
kind: Pod
metadata:
   name: nginx
spec:
   containers:
   -  name: nginx
      image: nginx:1.14.2
      ports:
      -  name: mycontainerPort
         containerPort: 80
