03_A.DEVOPS/Containerization/k8s/yamls/pod-node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: num
            operator: In
            values:
            - "2"            
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
