03_A.DEVOPS/Containerization/k8s/yamls/pod-requests.yaml
apiVersion: v1
kind: Pod
metadata:
   name: rate-limiter
spec:
   containers:
   -  name: nginx
      image: nginx
      ports:
      -  containerPort: 8080
      resources:
         requests:
            memory: 256Mi
            cpu: '1'
         limits:
           memory: "512Mi"
           cpu: "2"
