03_A.DEVOPS/Containerization/k8s/yamls/pod-volume-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
   name: mypod
spec:
   containers:
   -  name: mypod
      image: redis
      volumeMounts:
      -  name: foo
         mountPath: /etc/foo
         readOnly: true
   volumes:
   -  name: foo
      configMap:
         name: myconfigmap
   -  name: foo2
      secret:
         secretName: mysecret1
         key: mykey1
