03_A.DEVOPS/Containerization/k8s/yamls/runtime-class.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  runtimeClassName: myclass
  # ...
