03_A.DEVOPS/Containerization/k8s/yamls/service-externalip.yaml
apiVersion: v1
kind: Service
metadata:
   name: my-service
spec:
   selector:
      app.kubernetes.io/name: MyApp
   ports:
   -  name: http
      protocol: TCP
      port: 80
      targetPort: 49152
   externalIPs:
   - x.y.z.1
