03_A.DEVOPS/Containerization/k8s/yamls/storage-class-provisioner.yaml
kind: Service
apiVersion: v1
metadata:
   name: nfs-provisioner
   labels:
      app: nfs-provisioner
spec:
   ports:
   -  name: nfs
      port: 2049
   -  name: nfs-udp
      port: 2049
      protocol: UDP
   -  name: nlockmgr
      port: 32803
   -  name: nlockmgr-udp
      port: 32803
      protocol: UDP
   -  name: mountd
      port: 20048
   -  name: mountd-udp
      port: 20048
      protocol: UDP
   -  name: rquotad
      port: 875
   -  name: rquotad-udp
      port: 875
      protocol: UDP
   -  name: rpcbind
      port: 111
   -  name: rpcbind-udp
      port: 111
      protocol: UDP
   -  name: statd
      port: 662
   -  name: statd-udp
      port: 662
      protocol: UDP
   selector:
      app: nfs-provisioner
---
kind: Deployment
apiVersion: apps/v1
metadata:
   name: nfs-provisioner
spec:
   selector:
      matchLabels:
         app: nfs-provisioner
   replicas: 1
   strategy:
      type: Recreate
   template:
      metadata:
         labels:
            app: nfs-provisioner
      spec:
         serviceAccount: nfs-provisioner
         containers:
         -  name: nfs-provisioner
            image: k8s.gcr.io/sig-storage/nfs-provisioner:v3.0.0
            ports:
            -  name: nfs
               containerPort: 2049
            -  name: nfs-udp
               containerPort: 2049
               protocol: UDP
            -  name: nlockmgr
               containerPort: 32803
            -  name: nlockmgr-udp
               containerPort: 32803
               protocol: UDP
            -  name: mountd
               containerPort: 20048
            -  name: mountd-udp
               containerPort: 20048
               protocol: UDP
            -  name: rquotad
               containerPort: 875
            -  name: rquotad-udp
               containerPort: 875
               protocol: UDP
            -  name: rpcbind
               containerPort: 111
            -  name: rpcbind-udp
               containerPort: 111
               protocol: UDP
            -  name: statd
               containerPort: 662
            -  name: statd-udp
               containerPort: 662
               protocol: UDP
            securityContext:
               capabilities:
                  add:
                  - DAC_READ_SEARCH
                  - SYS_RESOURCE
            args:
            - -provisioner=example.com/nfs
            imagePullPolicy: IfNotPresent
            volumeMounts:
            -  name: export-volume
               mountPath: /export
         volumes:
         -  name: export-volume
            hostPath:
               path: /srv
