03_A.DEVOPS/Containerization/k8s/yamls/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-wear-watch
   namespace: app-space
spec:
   rules:
   -  http:
         paths:
         -  backend:
               service:
                  name: wear-service
                  port:
                     number: 8080
            path: /wear
            pathType: Prefix
         -  backend:
               service:
                  name: video-service
                  port:
                     number: 8080
            path: /watch
            pathType: Prefix
