03_A.DEVOPS/Containerization/k8s/yamls/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: app-ingress
   namespace: app-space
   annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   rules:
   -  http:
         paths:
         -  backend:
               service:
                  name: wear-service
                  port:
                     number: 8080
            path: /wear
            pathType: Prefix
         -  backend:
               service:
                  name: video-service
                  port:
                     number: 8080
            path: /watch
            pathType: Prefix
